fixing gutenberg media text on mobile

--- a/src/less/gutenberg/_gutenberg-elements.less
+++ b/src/less/gutenberg/_gutenberg-elements.less
@@ -51,10 +51,6 @@
 
 .wp-block-media-text {
   min-height: 380px;
-  @media (max-width: 680px) {
-    grid-template-columns: 100%!important;
-    grid-template-areas: "media-text-media" "media-text-content";
-  }
   &.alignfull {
     min-height: 600px;
   }
